--- a/SafetyAppliaction/Views/Shared/_Layout.cshtml
+++ b/SafetyAppliaction/Views/Shared/_Layout.cshtml
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/SafetyAppliaction.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta2/dist/css/bootstrap-select.min.css">
+ 
 </head>
 <body>
     <header>
@@ -24,6 +26,22 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-dark" href="#" id="safetyDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Safety
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="safetyDropdown">
+                                <li>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Requests" asp-action="Index">List Request</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Requests" asp-action="Reports">Reports</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Requests" asp-action="Guidelines">Guidelines</a>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                     <ul class="navbar-nav">
@@ -55,6 +73,8 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta2/dist/js/bootstrap-select.min.js"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
