--- a/SafetyAppliaction/Views/Requests/Index.cshtml
+++ b/SafetyAppliaction/Views/Requests/Index.cshtml
@@ -22,6 +22,7 @@
             <th>@Html.DisplayNameFor(model => model.Section)</th>
             <th>@Html.DisplayNameFor(model => model.Date)</th>
             <th>@Html.DisplayNameFor(model => model.Time)</th>
+            <th>Status</th> <!-- New column for StatusName -->
             <th class="text-center">Actions</th>
         </tr>
     </thead>
@@ -29,7 +30,7 @@
         @if (!Model.Any())
         {
             <tr>
-                <td colspan="10" class="text-center">No data available</td>
+                <td colspan="11" class="text-center">No data available</td>
             </tr>
         }
         else
@@ -46,6 +47,36 @@
                     <td>@Html.DisplayFor(modelItem => item.Section)</td>
                     <td>@Html.DisplayFor(modelItem => item.Date)</td>
                     <td>@Html.DisplayFor(modelItem => item.Time)</td>
+                    <td>
+                        @if (item.StatusId == 1)
+                        {
+                            <span>Waiting Checking</span>
+                        }
+                        else if (item.StatusId == 2)
+                        {
+                            <span>Checked</span>
+                        }
+                        else if (item.StatusId == 3)
+                        {
+                            <span>Reviewed</span>
+                        }
+                        else if (item.StatusId == 4)
+                        {
+                            <span>Approved DeptHead</span>
+                        }
+                        else if (item.StatusId == 5)
+                        {
+                            <span>Approved Manager</span>
+                        }
+                        else if (item.StatusId == 6)
+                        {
+                            <span>Rejected</span>
+                        }
+                        else
+                        {
+                            <span>Unknown Status</span>
+                        }
+                    </td>
                     <td class="text-center">
                         <a asp-action="Edit" asp-route-id="@item.RequestId" class="btn btn-warning btn-sm">Edit</a>
                         <a asp-action="Details" asp-route-id="@item.RequestId" class="btn btn-info btn-sm">Details</a>
